POFIM-5 Henter inntekt 3 siste måneder for søker gitt organisasjon og startdato.